registeration form finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,10 @@
           </span>
           Sign in</a>
       </li>
+      <li>
+        <a href="/register">
+          or Sign up</a>
+      </li>
     </ul>
   </nav>
 </header>
