--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,5 +16,5 @@
     <button type="submit">Sign in</button>
   </form>
 
-  <a href="#">Dont have an account, Create One Now</a>
+  <a href="#" routerLink="/register">Dont have an account, Create One Now</a>
 </div>
