--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,47 @@
-<p>profile works!</p>
+<div class="flex__container">
+  <div class="sidebar">
+    <div class="profile__intro">
+      <div class="profile__img">
+        <img src="../../assets/images/profile.jpg" alt="" />
+      </div>
+      <div class="profile__titles">
+        <div class="profile__titles__name">jan werthwein</div>
+        <div class="profile__titles__occupation">art director</div>
+        <div class="profile__titles__company">Entertainment Tonight Canada</div>
+        <div class="profile__titles__website">
+          <a href="http://www.etcanada.com" target="_BLANK">www.etcanada.com</a>
+        </div>
+        <div class="profile__titles__location">
+          <a href="http://www.etcanada.com" target="_BLANK">
+            <div><fa-icon [icon]="['fas', 'map-marker-alt']"></fa-icon></div>
+            <span>Toronto, Ontario, Canada</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="follow__btn">
+      <a href="#"><span id="follow__btn__label">Follow</span></a>
+    </div>
+    <div class="user__info">
+      <table>
+        <tr>
+          <td class="user__info__stat">Views</td>
+          <td class="user__info__stat_value">27,403</td>
+        </tr>
+        <tr>
+          <td class="user__info__stat">Likes</td>
+          <td class="user__info__stat_value">5,309</td>
+        </tr>
+        <tr>
+          <td class="user__info__stat">Followers</td>
+          <td class="user__info__stat_value">1,752</td>
+        </tr>
+        <tr>
+          <td class="user__info__stat">Following</td>
+          <td class="user__info__stat_value">786</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="post__container"></div>
+</div>
