--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,5 +1,6 @@
 @import "../../variables.scss";
 
+
 .bg {
   position: fixed;
   left: 0;
@@ -46,7 +47,6 @@
   left: 60%;
   transform: translateY(-50%);
 
-
   h1 {
     margin-bottom: 1rem;
   }
@@ -55,6 +55,7 @@
     padding: 1rem 0;
 
     .input__group {
+      margin: 1rem 0;
       label {
         display: block;
       }
@@ -63,14 +64,21 @@
         display: block;
         background-color: transparent;
         border-bottom: 1px solid $white;
-        margin: 1rem 0;
-        height: 1rem;
+        height: 2rem;
+        margin-bottom: .5rem;
         width: 400px;
         color: $white;
       }
 
       input:focus {
         border-bottom: 2px solid $primary;
+      }
+
+      .ng-valid.ng-dirty {
+        border-bottom: 2px solid $primary;
+      }
+      .ng-invalid.ng-dirty {
+        border-bottom: 2px solid $danger;
       }
     }
 
@@ -86,9 +94,25 @@
       transition: all 0.2s linear;
     }
 
+    button:disabled {
+      padding: 0.5rem 2rem;
+      background-color: $black;
+      border: 2px solid #af003d;
+      border-radius: .5rem;
+      color: #af003d;
+      font-size: 1.2rem;
+      font-weight: 700;
+      cursor: default;
+    }
+
     button:hover {
       background-color: $primary;
       color: $black;
+    }
+
+    button:disabled:hover {
+      background-color: $black;
+      color: #af003d;
     }
   }
 
