--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,9 @@
 /*Colors*/
-$black: #212121ff;
-$white: #f5f5f5ff;
-$grey: #4d4d4d;
-$primary: #f50057ff;
-$secondary: #73877bff;
+$black: #2b2b2b;
+$white: #ffffff;
+$grey: #f9f9f9;
+$primary: #0057ff;
+$secondary: rgb(38, 0, 255);
+$danger: #f00;
+$warning: #ff0;
+$success: #0f0;
