--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -42,6 +42,62 @@
         </tr>
       </table>
     </div>
+    <div class="user__social_links">
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'facebook-square']"></fa-icon>
+        </span>
+      </a>
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'twitter-square']"></fa-icon>
+        </span>
+      </a>
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'instagram-square']"></fa-icon>
+        </span>
+      </a>
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'youtube-square']"></fa-icon>
+        </span>
+      </a>
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'github-square']"></fa-icon>
+        </span>
+      </a>
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'linkedin']"></fa-icon>
+        </span>
+      </a>
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'flickr']"></fa-icon>
+        </span>
+      </a>
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'soundcloud']"></fa-icon>
+        </span>
+      </a>
+      <a href="#">
+        <span class="user__social_links__icon">
+          <fa-icon [icon]="['fab', 'telegram']"></fa-icon>
+        </span>
+      </a>
+    </div>
+    <div class="user__about">
+      <div class="user__about__title">About Me</div>
+      <div class="user__about__content">
+        Art Director & Motion Graphics designer at Entertainment Tonight Canada
+      </div>
+    </div>
+    <div class="user__join_date">
+      Member since: {{ "APRIL 26, 2015" | date: "MMMM d, y" | uppercase }}
+    </div>
   </div>
   <div class="post__container"></div>
 </div>
