--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -2,7 +2,7 @@
 
 .flex__container {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
   height: fit-content;
@@ -100,10 +100,46 @@
         }
       }
     }
+
+    .user__social_links {
+      margin-top: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      a {
+        color: #000;
+        font-size: 2rem;
+        margin-right: 6px;
+      }
+      :last-child {
+        margin-right: 0;
+      }
+    }
+
+    .user__about {
+      margin-top: 1rem;
+      font-size: 0.8rem;
+      .user__about__title {
+        font-weight: 600;
+      }
+      .user__about__content {
+        margin-top: 1rem;
+      }
+    }
+    .user__join_date {
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 0.7rem;
+      color: #696969;
+      margin-top: 1rem;
+    }
+
+    margin-bottom: 2rem;
   }
   .post__container {
     width: 100%;
-    height: 100%;
+    height: 200vh;
     margin-left: 1rem;
   }
 }
