--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,7 +3,7 @@ $black: #2b2b2b;
 $white: #ffffff;
 $grey: #f9f9f9;
 $primary: #0057ff;
-$secondary: rgb(38, 0, 255);
+$secondary: #adadad;
 $danger: #f00;
 $warning: #ff0;
 $success: #0f0;
