--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,7 +6,7 @@
   <h1>Sign Up</h1>
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="input__group">
-      <label for="firstName">First Name</label>
+      <label class="required" for="firstName">First Name</label>
       <input type="text" formControlName="firstName" id="firstName" />
     </div>
     <div class="input__group">
@@ -14,13 +14,14 @@
       <input type="text" formControlName="lastName" id="lastName" />
     </div>
     <div class="input__group">
-      <label for="email">Email Address</label>
+      <label class="required" for="email">Email Address</label>
       <input type="email" formControlName="email" id="email" />
       <span
         id="errorEmail"
         *ngIf="
+          registerForm.get('email').dirty &&
           registerForm.get('email').errors &&
-          registerForm.get('email').errors.validEmail
+          registerForm.get('email').errors.emailTaken
         "
         class="text-danger"
         ><fa-icon [icon]="['fas', 'info-circle']"></fa-icon>email already
@@ -39,7 +40,7 @@
       >
     </div>
     <div class="input__group">
-      <label for="password">Password</label>
+      <label class="required" for="password">Password</label>
       <input type="password" formControlName="password" id="password" />
       <span
         id="errorPassword"
@@ -54,7 +55,7 @@
       >
     </div>
     <div class="input__group">
-      <label for="confirmPassword">Confirm Password</label>
+      <label class="required" for="confirmPassword">Confirm Password</label>
       <input
         type="password"
         formControlName="confirmPassword"
