--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,16 +4,31 @@
 </div>
 <div class="login__form">
   <h1>Sign In</h1>
-  <form>
+  <form (submit)="login()">
     <div class="input__group">
       <label for="email">Email Address</label>
-      <input type="email" name="email" id="email">
+      <input
+        type="email"
+        [(ngModel)]="creds.email"
+        name="email"
+        id="email"
+        required
+      />
     </div>
     <div class="input__group">
       <label for="password">Password</label>
-      <input type="password" name="password" id="password">
+      <input
+        type="password"
+        [(ngModel)]="creds.password"
+        name="password"
+        id="password"
+        required
+      />
     </div>
-    <button type="submit">Sign in</button>
+    <div class="login__error" *ngIf="errorMsg">
+      {{ errorMsg }}
+    </div>
+    <button type="submit"><span *ngIf="isLoading"></span>Sign in</button>
   </form>
 
   <a href="#" routerLink="/register">Dont have an account, Create One Now</a>
