--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -12,7 +12,7 @@
 }
 
 .bg::after {
-  content: '';
+  content: "";
   display: block;
   background-color: rgba(0, 0, 0, 0.5);
   height: 100%;
@@ -34,18 +34,16 @@
   }
 }
 
-
 .login__form {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: $white;
+  background-color: $white;
+  color: $black;
   padding: 1rem;
   width: fit-content;
   border-radius: 1rem;
   top: 50%;
   left: 60%;
   transform: translateY(-50%);
-
 
   h1 {
     margin-bottom: 1rem;
@@ -62,11 +60,11 @@
       input {
         display: block;
         background-color: transparent;
-        border-bottom: 1px solid $white;
+        border-bottom: 1px solid $black;
         margin: 1rem 0;
         height: 1rem;
         width: 400px;
-        color: $white;
+        color: $black;
       }
 
       input:focus {
@@ -74,21 +72,40 @@
       }
     }
 
+    .login__error {
+      color: $danger;
+      margin: 1rem 0;
+      text-align: left;
+    }
+
     button {
+      display: flex;
+      align-items: center;
       padding: 0.5rem 2rem;
-      background-color: $black;
+      background-color: $white;
       border: 2px solid $primary;
-      border-radius: .5rem;
+      border-radius: 0.5rem;
       color: $primary;
       font-size: 1.2rem;
       font-weight: 700;
       cursor: pointer;
       transition: all 0.2s linear;
+
+      span {
+        display: inline-block;
+        border: 3px solid $grey;
+        border-top: 3px solid $primary;
+        border-radius: 50%;
+        height: 1rem;
+        width: 1rem;
+        margin-right: 1rem;
+        animation: loading 0.3s linear infinite, reveal 0.3s linear normal;
+      }
     }
 
     button:hover {
       background-color: $primary;
-      color: $black;
+      color: $white;
     }
   }
 
@@ -98,11 +115,30 @@
     font-size: 0.7rem;
     width: fit-content;
     padding: 0.5rem;
-    border-top: 1px solid $white;
+    border-top: 1px solid $black;
     margin: 0 auto;
   }
 
   a:hover {
-    color: $white;
+    color: $black;
+  }
+}
+@keyframes reveal {
+  from {
+    opacity: 0;
+    margin-right: 0;
+  }
+  to {
+    opacity: 100%;
+    margin-right: 1rem;
+  }
+}
+
+@keyframes loading {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(359deg);
   }
 }
