--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,14 +2,16 @@
 
 .content {
   width: 90%;
-  margin: 1rem auto;
+  margin: 5rem auto 5rem;
 }
 
 header {
   width: 100vw;
-
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: $black;
-
+  z-index: 10;
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -17,6 +19,7 @@ header {
     margin: 0 auto;
     width: 90%;
     padding: 0.5rem 0;
+    z-index: 100;
 
     .navbar-brand {
       font-size: 2rem;
@@ -99,7 +102,7 @@ header {
       height: 2.5rem;
       width: 2.5rem;
       margin-left: 1rem;
-      pointer-events: all;
+      background-size: cover;
       img {
         width: 100%;
         background-size: cover;
@@ -120,6 +123,7 @@ header {
       opacity: 0;
       transform: translateY(-5px);
       pointer-events: none;
+      z-index: 20;
       transition: all 0.2s linear;
 
       .navbar__dropdown_header {
@@ -134,6 +138,8 @@ header {
           height: 4rem;
           overflow: hidden;
           border-radius: 50%;
+
+          background-size: cover;
           img {
             width: 100%;
             background-size: cover;
