--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
 <div class="login__form">
   <h1>Sign In</h1>
   <form (submit)="login()">
-    <div class="input__group">
+    <div class="form__group">
       <label for="email">Email Address</label>
       <input
         type="email"
@@ -15,7 +15,7 @@
         required
       />
     </div>
-    <div class="input__group">
+    <div class="form__group">
       <label for="password">Password</label>
       <input
         type="password"
