--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,15 +5,15 @@
 <div class="login__form">
   <h1>Sign Up</h1>
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <div class="input__group">
+    <div class="form__group">
       <label class="required" for="firstName">First Name</label>
       <input type="text" formControlName="firstName" id="firstName" />
     </div>
-    <div class="input__group">
+    <div class="form__group">
       <label for="lastName">Last Name</label>
       <input type="text" formControlName="lastName" id="lastName" />
     </div>
-    <div class="input__group">
+    <div class="form__group">
       <label class="required" for="email">Email Address</label>
       <input type="email" formControlName="email" id="email" />
       <span
@@ -39,7 +39,7 @@
         email</span
       >
     </div>
-    <div class="input__group">
+    <div class="form__group">
       <label class="required" for="password">Password</label>
       <input type="password" formControlName="password" id="password" />
       <span
@@ -54,7 +54,7 @@
         be 8</span
       >
     </div>
-    <div class="input__group">
+    <div class="form__group">
       <label class="required" for="confirmPassword">Confirm Password</label>
       <input
         type="password"
