--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Ubuntu+Mono:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Ubuntu+Mono:wght@400;700&display=swap");
 
 @import "./variables.scss";
 
@@ -22,10 +22,6 @@ a {
   text-decoration: none;
 }
 
-input {
-  border: none;
-}
-
 input:focus {
   outline: none;
 }
@@ -38,4 +34,70 @@ input:focus {
 }
 .text-warning {
   color: $warning;
+}
+
+label {
+  text-transform: capitalize;
+  color: #696969;
+  font-weight: 600;
+}
+
+label.required::after {
+  content: "*";
+  color: $danger;
+}
+
+.form__group {
+  margin-bottom: 1rem;
+}
+
+input,
+select,
+textarea {
+  border: 1px solid #696969;
+  display: block;
+  width: 100%;
+  height: 1.8rem;
+  padding-left: 0.5rem;
+  font-weight: 500;
+  border-radius: 3px;
+  margin: 0.3rem 0;
+}
+
+textarea {
+  height: 7rem;
+  padding: 0.5rem;
+}
+
+button {
+  padding: 0.5rem 2rem;
+  background-color: $white;
+  border: 2px solid $primary;
+  border-radius: 0.5rem;
+  color: $primary;
+  font-size: 1.2rem;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all 0.2s linear;
+}
+
+button:disabled {
+  padding: 0.5rem 2rem;
+  background-color: $white;
+  border: 2px solid $secondary;
+  border-radius: 0.5rem;
+  color: $secondary;
+  font-size: 1.2rem;
+  font-weight: 700;
+  cursor: default;
+}
+
+button:hover {
+  background-color: $primary;
+  color: $white;
+}
+
+button:disabled:hover {
+  background-color: $white;
+  color: $secondary;
 }
