--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,6 +51,7 @@
       <li>
         <a
           href="#"
+          routerLink="search"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
         >
