--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -162,5 +162,19 @@
       }}
     </div>
   </div>
-  <div class="post__container"></div>
+  <div class="post__container">
+    <div class="post__grid row">
+      <div class="col col-lg-4 col-md-6 col-sm-12 col-xs-12 post__card">
+        <a class="post__card__thumbnail"></a>
+      </div>
+      <div class="col col-lg-4 col-md-6 col-sm-12 col-xs-12 post__card">
+        <a class="post__create">
+          <div class="plus_icon">
+            <fa-icon [icon]="['far', 'plus-square']"></fa-icon>
+          </div>
+          <div class="plus_text">Create New Post</div>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
