--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -144,7 +144,52 @@
   }
   .post__container {
     width: 100%;
-    height: 200vh;
     margin-left: 1rem;
+
+    .post__grid {
+      .post__card {
+        margin-bottom: 1rem;
+        .post__card__thumbnail {
+          display: block;
+          width: 100%;
+          height: 260px;
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center;
+          transition: all 0.2s linear;
+          border-radius: 3px;
+          background-color: $primary;
+        }
+        .post__card__thumbnail:hover {
+          box-shadow: inset 0px 0px 100px 50px rgba(0, 0, 0, 0.5);
+        }
+      }
+
+      .post__create {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 260px;
+        transition: all 0.2s linear;
+        border: 1px dashed #b7b7b7;
+        border-radius: 3px;
+        background-color: #fff;
+
+        .plus_icon {
+          font-size: 3rem;
+          color: #b7b7b7;
+        }
+        .plus_text {
+          font-size: 1.5rem;
+          font-weight: 600;
+          color: #9e9e9e;
+        }
+      }
+      .post__create:hover {
+        background-color: darken($color: $grey, $amount: 5%);
+      }
+    }
   }
 }
