file upload improved

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -168,7 +168,7 @@
         <a class="post__card__thumbnail"></a>
       </div>
       <div class="col col-lg-4 col-md-6 col-sm-12 col-xs-12 post__card">
-        <a class="post__create">
+        <a class="post__create" [routerLink]="['/post/editor']">
           <div class="plus_icon">
             <fa-icon [icon]="['far', 'plus-square']"></fa-icon>
           </div>
