--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -148,9 +148,15 @@
 
     .post__grid {
       .post__card {
+        position: relative;
         margin-bottom: 1rem;
+        padding: 0 1rem 1rem;
         .post__card__thumbnail {
-          display: block;
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
           width: 100%;
           height: 260px;
           background-repeat: no-repeat;
@@ -159,9 +165,75 @@
           transition: all 0.2s linear;
           border-radius: 3px;
           background-color: $primary;
+
+          .post__card__details {
+            position: absolute;
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            margin-top: 0.7rem;
+            .post__card__details_info {
+              a {
+                display: block;
+                color: #fff;
+              }
+              a:hover {
+                text-decoration: underline;
+              }
+              .info__title {
+                font-size: 1rem;
+                font-weight: 500;
+              }
+              .info__author {
+                font-size: 0.8rem;
+              }
+            }
+            .post__card__details_stats {
+              .stat {
+                font-size: 0.8rem;
+                margin-left: 1rem;
+                color: #fff;
+              }
+              span {
+                color: #fff;
+                margin-left: 0.3rem;
+              }
+            }
+          }
+
+          .post__action {
+            padding: 0.5rem;
+            width: 50%;
+            text-align: center;
+            margin-bottom: 1rem;
+            border-radius: 3px;
+            font-size: 1rem;
+            font-weight: 500;
+            border: none;
+            cursor: pointer;
+            pointer-events: none;
+            transition: all 0.3s ease-in;
+            opacity: 0;
+            transform: translateY(-1rem) rotateX(-45deg);
+          }
+          .action__edit {
+            color: #fff;
+            background-color: $primary;
+          }
+
+          .action__delete {
+            background-color: #fff;
+            color: $danger;
+          }
         }
         .post__card__thumbnail:hover {
           box-shadow: inset 0px 0px 100px 50px rgba(0, 0, 0, 0.5);
+
+          .post__action {
+            opacity: 1;
+            pointer-events: all;
+            transform: translateY(0rem) rotateX(0deg);
+          }
         }
       }
 
