--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -1,8 +1,8 @@
-<div class="header">
+<div class="header box__container">
   <span>{{ status }}</span>
   <a href="#" routerLink="/profile/{{ userId }}">Back to Profile</a>
 </div>
-<section>
+<section class="box__container">
   <div class="thumb__upload">
     <div
       class="thumb__preview"
