--- a/src/app/post-editor/post-editor.component.html
+++ b/src/app/post-editor/post-editor.component.html
@@ -1,4 +1,4 @@
-<div class="editor__container">
+<div class="editor__container box__container">
   <div class="post__details">
     <div class="post__details__thumbnail">
       <div
