--- a/src/app/search-post/search-post.component.html
+++ b/src/app/search-post/search-post.component.html
@@ -1,144 +1,38 @@
 <div class="post__grid row">
-  <div class="col col-lg-3 col-md-4 col-sm-6 post__card">
+  <div
+    class="col col-lg-3 col-md-4 col-sm-6 post__card"
+    *ngFor="let post of postList"
+  >
     <a
       class="post__card__thumbnail"
       [ngStyle]="{
-        'background-image': 'url(' + imgUrl + ')'
+        'background-image': 'url(' + post.thumbnail + ')'
       }"
     ></a>
     <div class="post__card__details">
       <div class="post__card__details_info">
-        <a href="#" class="info__title">Title</a>
-        <a href="#" class="info__author">author</a>
+        <a href="#" routerLink="/posts/{{ post.id }}" class="info__title"
+          >{{ post.title }}
+        </a>
+        <a
+          href="#"
+          routerLink="/profile/{{ post.createdBy.publicId }}"
+          class="info__author"
+        >
+          {{ post.createdBy.firstName + " " }}
+          <span *ngIf="post.createdBy.lastName">{{
+            post.createdBy.lastName
+          }}</span>
+        </a>
       </div>
       <div class="post__card__details_stats">
         <span class="stat">
           <fa-icon [icon]="['fas', 'eye']"> </fa-icon>
-          <span> 500</span>
+          <span> {{ post.views }}</span>
         </span>
         <span class="stat">
           <fa-icon [icon]="['fas', 'thumbs-up']"></fa-icon>
-          <span>351</span>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col col-lg-3 col-md-4 col-sm-6 post__card">
-    <a
-      class="post__card__thumbnail"
-      [ngStyle]="{
-        'background-image': 'url(' + imgUrl + ')'
-      }"
-    ></a>
-    <div class="post__card__details">
-      <div class="post__card__details_info">
-        <a href="#" class="info__title">Title</a>
-        <a href="#" class="info__author">author</a>
-      </div>
-      <div class="post__card__details_stats">
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'eye']"> </fa-icon>
-          <span> 500</span>
-        </span>
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'thumbs-up']"></fa-icon>
-          <span>351</span>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col col-lg-3 col-md-4 col-sm-6 post__card">
-    <a
-      class="post__card__thumbnail"
-      [ngStyle]="{
-        'background-image': 'url(' + imgUrl + ')'
-      }"
-    ></a>
-    <div class="post__card__details">
-      <div class="post__card__details_info">
-        <a href="#" class="info__title">Title</a>
-        <a href="#" class="info__author">author</a>
-      </div>
-      <div class="post__card__details_stats">
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'eye']"> </fa-icon>
-          <span> 500</span>
-        </span>
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'thumbs-up']"></fa-icon>
-          <span>351</span>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col col-lg-3 col-md-4 col-sm-6 post__card">
-    <a
-      class="post__card__thumbnail"
-      [ngStyle]="{
-        'background-image': 'url(' + imgUrl + ')'
-      }"
-    ></a>
-    <div class="post__card__details">
-      <div class="post__card__details_info">
-        <a href="#" class="info__title">Title</a>
-        <a href="#" class="info__author">author</a>
-      </div>
-      <div class="post__card__details_stats">
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'eye']"> </fa-icon>
-          <span> 500</span>
-        </span>
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'thumbs-up']"></fa-icon>
-          <span>351</span>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col col-lg-3 col-md-4 col-sm-6 post__card">
-    <a
-      class="post__card__thumbnail"
-      [ngStyle]="{
-        'background-image': 'url(' + imgUrl + ')'
-      }"
-    ></a>
-    <div class="post__card__details">
-      <div class="post__card__details_info">
-        <a href="#" class="info__title">Title</a>
-        <a href="#" class="info__author">author</a>
-      </div>
-      <div class="post__card__details_stats">
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'eye']"> </fa-icon>
-          <span> 500</span>
-        </span>
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'thumbs-up']"></fa-icon>
-          <span>351</span>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col col-lg-3 col-md-4 col-sm-6 post__card">
-    <a
-      class="post__card__thumbnail"
-      [ngStyle]="{
-        'background-image': 'url(' + imgUrl + ')'
-      }"
-    ></a>
-    <div class="post__card__details">
-      <div class="post__card__details_info">
-        <a href="#" class="info__title">Title</a>
-        <a href="#" class="info__author">author</a>
-      </div>
-      <div class="post__card__details_stats">
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'eye']"> </fa-icon>
-          <span> 500</span>
-        </span>
-        <span class="stat">
-          <fa-icon [icon]="['fas', 'thumbs-up']"></fa-icon>
-          <span>351</span>
+          <span>{{ post.likes }}</span>
         </span>
       </div>
     </div>
