--- a/src/app/edit-profile/edit-profile.component.scss
+++ b/src/app/edit-profile/edit-profile.component.scss
@@ -3,9 +3,6 @@
 .header {
   position: fixed;
   color: #696969;
-  background-color: $white;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-  padding: 1rem 2rem;
   font-size: 0.7rem;
   font-weight: 500;
   text-align: center;
@@ -13,6 +10,7 @@
   top: 3.75rem;
   left: 0;
   z-index: 9;
+  border-radius: 0;
 
   a {
     color: #fff;
@@ -33,10 +31,6 @@ section {
   display: flex;
   justify-content: space-between;
   margin: 10rem auto 5rem;
-  background-color: $white;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
-  padding: 1rem 2rem;
   width: fit-content;
   .thumb__upload {
     border-right: 1px solid #e2e2e2;
