--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -10,10 +10,6 @@
   .sidebar {
     width: 480px;
     height: 100%;
-    background-color: $white;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-    border-radius: 3px;
-    padding: 1rem 2rem;
     .profile__intro {
       .profile__img {
         width: 100px;
@@ -150,7 +146,6 @@
       .post__card {
         position: relative;
         margin-bottom: 1rem;
-        padding: 0 1rem 1rem;
         .post__card__thumbnail {
           position: relative;
           display: flex;
@@ -168,10 +163,13 @@
 
           .post__card__details {
             position: absolute;
+            bottom: 0;
+            width: 100%;
+            padding: 0.5rem 1rem;
             display: flex;
-            align-items: flex-start;
+            align-items: flex-end;
             justify-content: space-between;
-            margin-top: 0.7rem;
+            background-color: rgba(0, 0, 0, 0.5);
             .post__card__details_info {
               a {
                 display: block;
