--- a/src/app/search-people/search-people.component.html
+++ b/src/app/search-people/search-people.component.html
@@ -5,7 +5,17 @@
     [ngStyle]="{
       'background-image': 'url(' + profile.thumbnail + ')'
     }"
+    *ngIf="profile.thumbnail; else nothumb"
   ></a>
+  <ng-template #nothumb>
+    <a
+      href="#"
+      class="people__details__thumbnail"
+      [ngStyle]="{
+        'background-image': 'url(' + '' + ')'
+      }"
+    ></a>
+  </ng-template>
   <div class="people__details__info">
     <a href="#" routerLink="/profile/{{ profile.publicId }}" class="info__name">
       <span>{{ profile.firstName }}</span>
@@ -14,22 +24,28 @@
     <div class="info_occupation" *ngIf="profile.jobTitle">
       {{ profile.jobTitle }}
     </div>
-    <div class="follow__btn">
-      <a href="#">
-        <span id="follow__btn_label">Follow</span>
-      </a>
+    <div
+      class="follow__btn"
+      *ngIf="profile.publicId != loggedIn.publicId; else elseBlock"
+    >
+      <button
+        (click)="toggleFollow(profile)"
+        [ngClass]="{ active: profile.followingStatus }"
+      >
+        <span id="follow__btn_label">{{
+          profile.followingStatus ? "Following" : "Follow"
+        }}</span>
+      </button>
     </div>
-    <!-- <ng-template #elseBlock>
+    <ng-template #elseBlock>
       <div class="follow__btn">
-        <a
-          href="#"
-          routerLink="{{ '/profile/' + userProfile.publicId + '/edit' }}"
-          ><span id="follow__btn__label">Edit Profile</span></a
-        >
+        <a href="#" routerLink="{{ '/profile/' + profile.publicId + '/edit' }}">
+          <span id="follow__btn__label">Edit Profile</span>
+        </a>
       </div>
-    </ng-template> -->
+    </ng-template>
   </div>
-  <div class="people__details__posts">
+  <!-- <div class="people__details__posts">
     <a
       class="post__thumbnail"
       [ngStyle]="{
@@ -65,5 +81,5 @@
       }"
     >
     </a>
-  </div>
+  </div> -->
 </div>
