--- a/src/app/search-people/search-people.component.scss
+++ b/src/app/search-people/search-people.component.scss
@@ -14,7 +14,9 @@
     height: 6rem;
     width: 6rem;
     margin-left: 1rem;
+    background-position: center;
     background-size: cover;
+    background-color: $secondary;
   }
   .people__details__info {
     margin-right: auto;
@@ -31,18 +33,21 @@
     }
     .follow__btn {
       margin-top: 1rem;
+      button,
       a {
         font-size: 0.8rem;
         background-color: $primary;
         color: #fff;
         padding: 0.3rem 1rem;
+        border: none;
         border-radius: 3px;
         transition: background-color 0.3s linear;
       }
 
-      a.active {
+      button.active {
         background-color: #696969;
       }
+      button:hover,
       a:hover {
         background-color: darken($color: $primary, $amount: 10%);
       }
