--- a/src/app/search-post/search-post.component.scss
+++ b/src/app/search-post/search-post.component.scss
@@ -7,6 +7,7 @@
       display: block;
       width: 100%;
       height: 200px;
+      background: $primary;
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
