--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,13 @@ label.required::after {
   margin-bottom: 1rem;
 }
 
+.box__container {
+  background-color: $white;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  padding: 1rem 2rem;
+}
+
 input,
 select,
 textarea {
@@ -95,6 +102,10 @@ button:disabled {
 button:hover {
   background-color: $primary;
   color: $white;
+}
+
+button:focus {
+  outline: none;
 }
 
 button:disabled:hover {
